[metadata]
name = undetectable-scrapy-selenium
version = 0.1.0
url = https://github.com/cyclehacker/undetectable-scrapy-selenium
licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
description = Scrapy selenium with undetectable chromedriver
long_description = file:README.md

[options]
include_package_data = true

[pep8]
max-line-length = 100
